<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.segunfrancis.spacex.ui.filter.FilterFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_filter_launches"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yearFilterLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_by_years"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/yearsFilterChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/yearFilterLabel"
                app:singleSelection="true" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/yearsDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yearsFilterChipGroup" />

            <TextView
                android:id="@+id/launchStateFilterLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_by_launch_state"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/yearsDivider" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/launchStateChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/launchStateFilterLabel"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/successfulChip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_successful" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/unsuccessfulChip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_unsuccessful" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/launchStateDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/launchStateChipGroup" />

            <TextView
                android:id="@+id/orderByFilterLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_order_by"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/launchStateDivider" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/orderByChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/orderByFilterLabel"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/ascendingChip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ascending" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/descendingChip"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_descending" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/orderByDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderByChipGroup" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonClearFilters"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/text_clear_filters"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/orderByDivider" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>